# StreamMyHeart

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/: build-dlib-macos.py  build-dlib-windows.py  build-opencv-macos.py  build-opencv-windows.py  utils.py
.github/scripts/: Build-Windows.ps1  Package-Windows.ps1  build-dlib-macos.py  build-dlib-windows.py  build-macos  build-opencv-macos.py  build-opencv-windows.py
.github/scripts/utils.zsh/: check_macos
.github/workflows/: build-project.yaml  pr-pull.yaml  push-branch.yaml
cmake/common/: buildspec_common.cmake
cmake/macos/resources/: distribution.in
cmake/windows/: compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/windows/resources/: installer-Windows.iss.in
data/: test.effect
data/locale/: de-DE.ini  en-GB.ini  en-US.ini  es-ES.ini  fr-FR.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  pl-PL.ini  pt-PT.ini  ru-RU.ini  zh-CN.ini
eval/: evaluate_results.py  extract_time_from_logs.py  generate_gt_and_es.py  ground_truth.csv  rank_csv_files.py  run_evaluation.cpp
eval/new_results/: DLIB_BUTTERWORTH_BANDPASS_CHROM_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  DLIB_BUTTERWORTH_BANDPASS_GREEN_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  DLIB_BUTTERWORTH_BANDPASS_GREEN_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  DLIB_BUTTERWORTH_BANDPASS_GREEN_NONE_SMOOTHING_OFF.csv  DLIB_BUTTERWORTH_BANDPASS_PCA_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  DLIB_DETREND_CHROM_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  DLIB_DETREND_CHROM_NONE_SMOOTHING_OFF.csv  DLIB_DETREND_CHROM_NONE_SMOOTHING_ON.csv  DLIB_DETREND_GREEN_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  DLIB_DETREND_PCA_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  DLIB_DETREND_PCA_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  DLIB_DETREND_PCA_NONE_SMOOTHING_ON.csv  DLIB_NONE_CHROM_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  DLIB_NONE_CHROM_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  DLIB_NONE_CHROM_NONE_SMOOTHING_OFF.csv  DLIB_NONE_CHROM_NONE_SMOOTHING_ON.csv  DLIB_NONE_GREEN_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  DLIB_NONE_PCA_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  DLIB_NONE_PCA_NONE_SMOOTHING_ON.csv  DLIB_ZERO_MEAN_CHROM_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  DLIB_ZERO_MEAN_CHROM_NONE_SMOOTHING_OFF.csv  DLIB_ZERO_MEAN_GREEN_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  DLIB_ZERO_MEAN_GREEN_NONE_SMOOTHING_OFF.csv  DLIB_ZERO_MEAN_PCA_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  DLIB_ZERO_MEAN_PCA_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  DLIB_ZERO_MEAN_PCA_NONE_SMOOTHING_ON.csv  HAAR_CASCADE_BUTTERWORTH_BANDPASS_CHROM_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  HAAR_CASCADE_BUTTERWORTH_BANDPASS_CHROM_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  HAAR_CASCADE_BUTTERWORTH_BANDPASS_CHROM_NONE_SMOOTHING_ON.csv  HAAR_CASCADE_BUTTERWORTH_BANDPASS_GREEN_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  HAAR_CASCADE_BUTTERWORTH_BANDPASS_PCA_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  HAAR_CASCADE_BUTTERWORTH_BANDPASS_PCA_NONE_SMOOTHING_ON.csv  HAAR_CASCADE_DETREND_CHROM_NONE_SMOOTHING_ON.csv  HAAR_CASCADE_DETREND_GREEN_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  HAAR_CASCADE_DETREND_PCA_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  HAAR_CASCADE_DETREND_PCA_NONE_SMOOTHING_OFF.csv  HAAR_CASCADE_NONE_CHROM_NONE_SMOOTHING_OFF.csv  HAAR_CASCADE_NONE_CHROM_NONE_SMOOTHING_ON.csv  HAAR_CASCADE_NONE_PCA_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  HAAR_CASCADE_NONE_PCA_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  (+4 more)
eval/results/: DLIB_BUTTERWORTH_BANDPASS_CHROM_BUTTERWORTH_BANDPASS.csv  DLIB_BUTTERWORTH_BANDPASS_CHROM_NONE.csv  DLIB_DETREND_CHROM_NONE.csv  DLIB_DETREND_PCA_BUTTERWORTH_BANDPASS.csv  DLIB_DETREND_PCA_NONE.csv  DLIB_NONE_CHROM_BUTTERWORTH_BANDPASS.csv  DLIB_NONE_PCA_NONE.csv  DLIB_ZERO_MEAN_CHROM_NONE.csv  DLIB_ZERO_MEAN_PCA_NONE.csv  first_evaluation_results.csv
eval/results/Iteration 2/: DLIB_BUTTERWORTH_BANDPASS_PCA_BUTTERWORTH_BANDPASS.csv  DLIB_BUTTERWORTH_BANDPASS_PCA_NONE.csv  DLIB_DETREND_CHROM_BUTTERWORTH_BANDPASS.csv  DLIB_NONE_CHROM_NONE.csv  DLIB_NONE_PCA_BUTTERWORTH_BANDPASS.csv  DLIB_ZERO_MEAN_CHROM_BUTTERWORTH_BANDPASS.csv  DLIB_ZERO_MEAN_PCA_BUTTERWORTH_BANDPASS.csv
eval/results/Iteration 3/: DLIB_BUTTERWORTH_BANDPASS_CHROM_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  DLIB_BUTTERWORTH_BANDPASS_CHROM_NONE_SMOOTHING_OFF.csv  DLIB_BUTTERWORTH_BANDPASS_CHROM_NONE_SMOOTHING_ON.csv  DLIB_BUTTERWORTH_BANDPASS_GREEN_NONE_SMOOTHING_ON.csv  DLIB_BUTTERWORTH_BANDPASS_PCA_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  DLIB_BUTTERWORTH_BANDPASS_PCA_NONE_SMOOTHING_OFF.csv  DLIB_BUTTERWORTH_BANDPASS_PCA_NONE_SMOOTHING_ON.csv  DLIB_DETREND_CHROM_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  DLIB_DETREND_GREEN_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  DLIB_DETREND_GREEN_NONE_SMOOTHING_OFF.csv  DLIB_DETREND_GREEN_NONE_SMOOTHING_ON.csv  DLIB_DETREND_PCA_NONE_SMOOTHING_OFF.csv  DLIB_NONE_GREEN_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  DLIB_NONE_GREEN_NONE_SMOOTHING_OFF.csv  DLIB_NONE_GREEN_NONE_SMOOTHING_ON.csv  DLIB_NONE_PCA_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  DLIB_NONE_PCA_NONE_SMOOTHING_OFF.csv  DLIB_ZERO_MEAN_CHROM_BUTTERWORTH_BANDPASS_SMOOTHING_OFF.csv  DLIB_ZERO_MEAN_CHROM_NONE_SMOOTHING_ON.csv  DLIB_ZERO_MEAN_GREEN_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  DLIB_ZERO_MEAN_GREEN_NONE_SMOOTHING_ON.csv  DLIB_ZERO_MEAN_PCA_NONE_SMOOTHING_OFF.csv  HAAR_CASCADE_BUTTERWORTH_BANDPASS_CHROM_NONE_SMOOTHING_OFF.csv  HAAR_CASCADE_BUTTERWORTH_BANDPASS_GREEN_BUTTERWORTH_BANDPASS_SMOOTHING_ON.csv  HAAR_CASCADE_BUTTERWORTH_BANDPASS_GREEN_NONE_SMOOTHING_OFF.csv  HAAR_CASCADE_BUTTERWORTH_BANDPASS_GREEN_NONE_SMOOTHING_ON.csv  HAAR_CASCADE_DETREND_CHROM_NONE_SMOOTHING_OFF.csv  (+25 more)
src/: graph_source.cpp  graph_source.h  graph_source_info.c  graph_source_info.h  heart_rate_source.cpp  heart_rate_source.h  heart_rate_source_info.c  heart_rate_source_info.h  obs_utils.cpp  obs_utils.h  plugin-main.cpp
src/algorithm/: FaceDetection.cpp  FaceDetection.h  HeartRateAlgorithm.cpp  HeartRateAlgorithm.h  heart_rate_algorithm.cpp  heart_rate_algorithm.h  patches-face-detection.cpp  patches-face-detection.h
src/eval/: generate_gt_and_es.py  ground_truth.csv  run_evaluation.cpp
(+175 files in other folders)
